--- a/Code/computationalResults.Rmd
+++ b/Code/computationalResults.Rmd
@@ -1,7 +1,6 @@
 ---
-title: "Estimation_Performance"
-author: "Josh Zitovsky"
-date: "5/10/2019"
+title: "Computational Performance"
+author: "Joshua Zitovsky and Michael Love"
 output: html_document
 ---
 
@@ -9,62 +8,11 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-$$
-\newcommand{\Cov}[1]{\operatorname{Cov}\left(#1\right)}
-
-\newcommand{\Var}[1]{\operatorname{Var}\left(#1\right)}
-
-\newcommand{\Sumn}[0]{\sum_{i=1}^n}
-
-\newcommand{\Summ}[0]{\sum_{i=1}^m}
-
-\newcommand{\Prodn}[0]{\prod_{i=1}^n}
-
-\newcommand{\Prodm}[0]{\prod_{i=1}^m}
-
-\newcommand{\MLE}[1]{\widehat{#1}_\text{MLE}}
-
-\newcommand{\MME}[1]{\widehat{#1}_\text{MME}}
-
-\newcommand{\P}[1]{P\left(#1\right)}
-
 \newcommand{\by}[0]{\mathbf{y}}
-
-\newcommand{\bp}[0]{\mathbf{p}}
-
-\newcommand{\bn}[0]{\mathbf{n}}
-
 \newcommand{\bY}[0]{\mathbf{Y}}
 
-\newcommand{\bx}[0]{\mathbf{x}}
 
-\newcommand{\bX}[0]{\mathbf{X}}
-
-\newcommand{\bbeta}[0]{\boldsymbol{\beta}}
-
-\newcommand{\bphi}[0]{\boldsymbol{\phi}}
-
-\newcommand{\iid}[0]{\overset{iid}\sim}
-
-\newcommand{\Exp}[1]{\text{Exp}\left(#1\right)}
-
-\newcommand{\Pois}[1]{\text{Poisson}\left(#1\right)}
-
-\newcommand{\Bin}[1]{\text{Binomial}\left(#1\right)}
-
-\newcommand{\Bern}[1]{\text{Bernulli}\left(#1\right)}
-
-\newcommand{\Gamd}[1]{\text{Gamma}\left(#1\right)}
-
-\newcommand{\Betad}[1]{\text{Beta}\left(#1\right)}
-
-\newcommand{\Geo}[1]{\text{Geometric}\left(#1\right)}
-
-\newcommand{\set}[1]{\left\{#1\right\}}
-$$
-
-
-```{r setup, echo=F, results='hide', warning=FALSE, message=FALSE}
+```{r setup2, echo=F, results='hide', warning=FALSE, message=FALSE}
 ###SET-UP###
 
 #tweaking options
@@ -105,7 +53,7 @@ betabinom.log.lik <- function(y, x, beta, param, offset) {
   dbetabinom(y, prob=p.hat, size=param[-1], theta=param[1], log=TRUE)
 }
 
-#function which parittions the data into a number of groups (input), calculates apeglm estimates for the groups with C++, and outputs elapse time for MLE, overdispersion and apeglm estimation
+#function which parittions the data into a number of equally sized, disjoint groups, calculates apeglm estimates for the groups with C++, and outputs elapse time for MLE, overdispersion and apeglm estimation
 partitionDataC = function(groups, n=100, tolerance=1e-14) {
   set.seed(1)
   mleTimes = vector("double", length(groups))
@@ -337,9 +285,13 @@ getLogLik = function(beta, x, y, n, theta) {
   lik = sum(dbetabinom(y, prob = prob, size = n, theta = theta, log = TRUE))
   return(lik)
 }
+
+getMeanTime = function(ls) {
+  mean(ls$time)
+}
 ```
 
-## Simulation - Computational Performance
+# Simulation - Computational Performance
 
 We simulate $\bY_{5000 \times 100} = [Y_{ij}]$ from $\text{BetaBin}(n_{ij}, p_i, \phi_i)$, $\boldsymbol \phi = (\phi_1,...,\phi_{5000})^T$ from $U(1,1000)$, $\mathbf p = (p_1,...,p_{5000})$ and $N(.5,.05)$, $\mathbf N_{5000 \times 100} = [n_{ij}]$ from $\text{NB}(\mu_i, 1/\theta_i)$, where $\boldsymbol \mu = (\mu_1,...,\mu_{5000}), \boldsymbol \theta = (\theta_1,...,\theta_{5000})$ are DESeq2 estimates from the airway dataset in line with the vignette. $\bY$ and $\mathbf N$ are 5000 gene by 100 sample matrices of simulated allele-specific and total counts for one of two alleles. It is assumed that all 100 samples have the same two alleles for all 5000 genes. 
 
@@ -379,8 +331,8 @@ ase.cts <- matrix(rbetabinom(prod(dim(cts)), prob=prob,             #5000x100 ma
 #results in a 5000x100 matrix of beta-binomially distributed counts, where the trial numbers are random (following the various (estimated) NB distributions from the previous data set), the probabilities are random (normally distributed and concentrated near 0.5), and random overdispersion is introduced (distributed as uniform from 1 to 1000). Assume these represent the number of reads belonging to a single (of two) alleles, thus assuming all samples have two different alleles for all genes, and they are the same two alleles. 'cts' is the reads, 'theta' is random dispersion, 'prob' is the allelic imbalance) 
 ```
 
-## microbenchmarking
-```{r}
+# microbenchmarking
+```{r microbenchmarking}
 dummyList = list(1,1,1,1,1,1,1,1,1,1)
 timesAod = list()
 timesVgam = list()
@@ -447,60 +399,43 @@ for (i in 2:10) {
   cat("\n FINISHED AN ITERATION \n")
 }
 
-iWantToBeDoneWithThisPaperAlready = function(ls) {
-  mean(ls$time)
-}
-meanAodTimes = unlist(lapply(timesAod, iWantToBeDoneWithThisPaperAlready))
-meanGamlssTimes = unlist(lapply(timesGamlss, iWantToBeDoneWithThisPaperAlready))
-meanHrqTimes = unlist(lapply(timesHrq, iWantToBeDoneWithThisPaperAlready))
-meanAods3Times = unlist(lapply(timesAods3, iWantToBeDoneWithThisPaperAlready))
-meanVgamTimes = unlist(lapply(timesVgam, iWantToBeDoneWithThisPaperAlready))
+meanAodTimes = unlist(lapply(timesAod, getMeanTime))
+meanGamlssTimes = unlist(lapply(timesGamlss, getMeanTime))
+meanHrqTimes = unlist(lapply(timesHrq, getMeanTime))
+meanAods3Times = unlist(lapply(timesAods3, getMeanTime))
+meanVgamTimes = unlist(lapply(timesVgam, getMeanTime))
+cat("mean aod times \n")
 meanAodTimes/100000
+cat("mean gamlss times \n")
 meanGamlssTimes/100000
+cat("mean HRQoL times \n")
 meanHrqTimes/100000
+cat("mean aods3 times \n")
 meanAods3Times/100000
+cat("mean VGAM times \n")
 meanVgamTimes/100000
 #one or two of the packages were giving a lot of warnings
 ```
 
 ## microbenchmark plot
-```{r}
-meanAodTimes = unlist(lapply(timesAod, iWantToBeDoneWithThisPaperAlready))[2:10]/1000000
-meanGamlssTimes = unlist(lapply(timesGamlss, iWantToBeDoneWithThisPaperAlready))[2:10]/1000000
-meanHrqTimes = unlist(lapply(timesHrq, iWantToBeDoneWithThisPaperAlready))[2:10]/1000000
-meanAods3Times = unlist(lapply(timesAods3, iWantToBeDoneWithThisPaperAlready))[2:10]/1000000
-meanVgamTimes = unlist(lapply(timesVgam, iWantToBeDoneWithThisPaperAlready))[2:10]/1000000
-meanProregTimes = unlist(lapply(timesProreg, iWantToBeDoneWithThisPaperAlready))[2:10]/1000000
-meanApeglmTimes = unlist(lapply(timesApeglm, iWantToBeDoneWithThisPaperAlready))[2:10]/1000000
+```{r microbenchPlot1}
 timesMicro = data.frame(times=c(meanAodTimes, meanGamlssTimes, meanHrqTimes, meanAods3Times, meanVgamTimes, meanApeglmTimes),
 Package = c(rep("aod", 9), rep("gamlss", 9), rep("HRQoL", 9), rep("aods3", 9), rep("VGAM", 9), rep("apeglm", 9)))
 
-timesMicro = data.frame(meanAodTimes, meanGamlssTimes, meanHrqTimes, meanAods3Times, meanVgamTimes, meanApeglmTimes, meanProregTimes)
+#timesMicro = data.frame(meanAodTimes, meanGamlssTimes, meanHrqTimes, meanAods3Times, meanVgamTimes, meanApeglmTimes, meanProregTimes)
 #write.csv(timesMicro, "~/Desktop/timesMicro.csv")
 ```
 
 ```{r}
-times = read.csv("~/Desktop/timesMicro.csv")
-attach(times)
+#times = read.csv("~/Desktop/timesMicro.csv")
+# attach(times)
 timesMicro = data.frame(times=c(meanAodTimes, meanGamlssTimes, meanHrqTimes, meanAods3Times, meanVgamTimes, meanApeglmTimes),
 Package = c(rep("aod", 9), rep("gamlss", 9), rep("HRQoL", 9), rep("aods3", 9), rep("VGAM", 9), rep("apeglm", 9)))
-detach(times)
+# detach(times)
 ```
 
-```{r}
-ggplot(data = timesMicro, mapping = aes(y=times, x=rep(c(2:10), 6), color=Package, fill=Package)) +
-  geom_point(mapping = aes(shape=Package), size=2) +
-  geom_line() +
-  ylab("Time (in milliseconds)") +
-  xlab("Number of Groups") + 
-  scale_y_continuous(trans = "log2", breaks=c(7,15,30,60,125,250,500,1000,2000)) +
-  scale_color_manual(values = dichromat(c("#000000","#CDCD00","#D55E00","#0000FF", "#FF69B4", "#56B4E9"))) +
-  scale_fill_manual(values = dichromat(c("#000000","#CDCD00","#D55E00","#0000FF", "#FF69B4", "#56B4E9"))) +
-  scale_shape_manual(values = c(16,24,25,22,23,0)) + 
-  theme_minimal()
-```
 
-```{r}
+```{r microbenchPlot2}
 microBench = ggplot(data = timesMicro, mapping = aes(y=times, x=rep(c(2:10), 6), color=Package, fill=Package)) +
   geom_point(mapping = aes(shape=Package), size=2) +
   geom_line() +
@@ -516,12 +451,14 @@ microBench = ggplot(data = timesMicro, mapping = aes(y=times, x=rep(c(2:10), 6),
 microBench
 ```
 
-## Aod 2-10 groups
-```{r}
+# Analysis on Full Simulated Dataset
+
+## Convergence Failures with Aod (computational diagnostic)
+```{r aod}
 groups = 2:10
-#resA = partitionDataA(groups)
+resA = partitionDataA(groups)
 #saveRDS(resA, "~/Desktop/resA.rds")
-resA = readRDS("~/Desktop/resA.rds")
+#resA = readRDS("~/Desktop/resA.rds")
 cat("problems for 2 groups\n")
 summary(as.factor((unlist(resA$warnList[[1]]))))
 cat("problems for 4 groups\n")
@@ -534,11 +471,11 @@ cat("problems for 10 groups\n")
 summary(as.factor((unlist(resA$warnList[[9]]))))
 ```
 
-## Comparisons of estimates and their associated log-likelihoods 
-There does appear to be noteworthy differences between apeglm and aod and many instances of convergence failures for aod, but they are not neccesarily related. C++ estimates are always closer to VGAM and have a higher log-likelihood (even for genes where converence occurs for all method).
+## Comparisons of Estimates and their Associated Log-Likelihoods (computational diagnostic) 
+There does appear to be noteworthy differences between apeglm and aod and many instances of convergence warnings for aod, but they are not neccesarily related. C++ estimates are always closer to VGAM and have a higher log-likelihood (even for genes where converence occurs for all method).
 
-```{r}
-cat("coefficient estimates and associated log-likelihoods for apeglm, VGAM and ash (in that order)")
+```{r compareEstimates}
+cat("coefficient estimates and associated LL for apeglm, VGAM and ash (in that order), for different genes and group sizes")
 i=2
 j=636
 cmp1 = comparePckgs(i, j)
@@ -766,11 +703,11 @@ getLogLik(as.vector(cmp1$aod), x, y, n, cmp1$apeglmTheta)
 ```
 
 
-## Benchmarking Aod and VGAM Package
+## Computational Benchmarking
 
-Below gives elapsed time for ML estimation with apeglm and with aod. Apeglm was run with two iterations of overdispersion estimation. We can see that our package is substantially faster, and the difference grows the more groups are involved. Furthermore, aod frequently had converge issues (maximum iterations reached), while all of our estimates converged. Our estimates differed from aod, but between the convergence warnings issued and the fact that our estimates were much closer to VGAM than aod for one of the genes chosen at random, we conclude that it is our estimates that are correct. 
+Below gives elapsed time for ML estimation with apeglm and with aod. Apeglm was run with two iterations of overdispersion estimation. We can see that our package is substantially faster, and the difference grows the more groups are involved. Furthermore, aod frequently had converge issues (maximum iterations reached), while all of our estimates converged. Our estimates differed from aod (and even VGAM at times), but was always closer to the global likelihood maximum as evaluated by a larger log-likelihood.
 
-```{r,echo=F}
+```{r VGAM,echo=F}
 #calculating MLE times for 2-10 groups for aod package and apeglm w/ C++
 groups= c(2:10)
 resultsMC = partitionDataMT(groups, n = 100)
@@ -784,32 +721,30 @@ timesA = resA$mleTimes
 data.frame(2:10) %>%
   cbind(timesA) %>%
   cbind(timesMC) %>%
-  rename(groups = X2.10, aodTime = timesA, apeglmTime = timesMC)
+  dplyr::rename(groups = `X2.10`, aodTime = timesA, apeglmTime = timesMC)
 
 head(resA$fit.last)
 head(resultsMC$fit.last$map)
 ```
 
 
-## Benchmarking new and old apeglm package
+## Benchmarking New and Old Apeglm Package
 
-Below gives elapsed time for ML estimation with apeglm and with aod. Both apeglm methods were run with one iteration of overdispersion estimation as in the vignette. Again, we can see that our package is substantially faster, and the difference grows the more groups are involved. With more iterations of overdispersion estimation, the difference between the two methods should grow (favoring the C++ method). 
+Below gives elapsed time for ML estimation with new and old apeglm package. Both apeglm methods were run with two iterations of overdispersion estimation as in the vignette. Again, we can see that our package is substantially faster, and the difference grows the more groups are involved. With more iterations of overdispersion estimation, the difference between the two methods should grow (favoring the C++ method). 
 
-```{r,echo=F}
+```{r apeglm,echo=F}
 resultsC = partitionDataC(groups)
+cat("new package times for varying group sizes (2-10) \n")
 timesC = resultsC$totalTimes
 
 resultsO = partitionDataO(groups)
+cat("old package times for varying group sizes (2-10) \n")
 timesO = resultsO$totalTimes
 ```
 
-## paper-ready plot for computation time
+## Paper-Ready Plot for Computation Time
 The plots below are based on my code, not Mike's (i.e. we don't re-run anything in R unless convergence was not achieved in C++). 
-```{r, echo=F}
-timesC = c(30.946,34.473,37.165,39.451,42.144,44.436,47.603,48.939,51.531)
-timesO = c(156.803, 262.406,  361.673,  511.782,  645.705,  813.858,  985.942, 1195.837, 1414.874)
-timesMC = c(23.900, 25.146, 27.278, 28.268, 29.690, 31.106, 32.879, 34.297, 35.497)
-timesA = c(165.787,  284.827,  399.067,  501.456,  643.628,  761.160,  869.816, 1014.554, 1176.624)
+```{r macroPlot, echo=F}
 timesApeglm = data.frame(times = c(timesC,timesO), Package = c(rep("apeglm (new)", 9), rep("apeglm (old)", 9)))
 
 apeglmPlot = ggplot(data = timesApeglm, mapping = aes(y=times, x=rep(c(2:10), 2), color=Package)) +
@@ -841,11 +776,11 @@ timePlot = cowplot::plot_grid(mlePlot, apeglmPlot, align = "hv", ncol=2) +
 timePlot
 ```
 
-## Benchmarking with Numeric Example
+# Benchmarking with Numeric Example
 
 We now have three variables. $\bx_1$ is an indicator that splits the data into two groups, $\bx_2 \sim N(0,1)$ and $\bx_3 \sim N(0,1)$. We compare apeglm estimation between the new and old package as well as ML estimation between apeglm and aod. Like before, two iterations were used for overdispersion estimation when getting the MLE using apeglm. 
 
-```{r, echo=F}
+```{r numeric, echo=F}
 f = factor(rep(1:2, 50))
 x = model.matrix(~f)
 x = cbind(x, rnorm(100))
@@ -924,7 +859,7 @@ system.time({
 
 The above simulation was modified so that $\bx_3 \sim N(20\bx_1, 20^2)$ to introduce multicolinearity and see the effects on computational performance. $\bx_3$ was standardized to have mean 0 and variance 1, as suggested in the vignette. Performance was nearly identical.
 
-```{r, echo=F}
+```{r multicolinearity, echo=F}
 f = factor(rep(1:2, 50))
 x = model.matrix(~f)
 x = cbind(x, rnorm(100))
